Refactoring and code improving for StrandSort